test/tests/operators/match/error_incomparable_range_bounds.txt
error: range pattern bounds are not comparable
 --> tests/operators/match/error_incomparable_range_bounds.tql:7:3
  |
7 |   1.."upper" => {
  |   ^^^^^^^^^^ 
  |
